# color-science

./: .cursorrules  .gitignore  EXPERIMENTAL_FINDINGS.md
ColorChecker24/: README.md
SpyderCheckr24/: README.md  back.txt  cti3_to_cti2.go  downloaded.icm  front-calibrated-ax.ti3  front-calibrated.ti3  front-printed-calibrated-ax.txt  front-printed-calibrated.txt  front-printed-selphy.txt  front-printed.ti3  front-printed.txt  front-rel-ax-inv.icm  front-rel-ax.icm  front-rel-ax.tif  front-rel-cal-inv.icm  front-rel-cal.icm  front-rel-cal.tif  front-rel-inv.icm  front-rel.icm  front.cht  front.cie  front.lab  front.ti1  front.ti2  front.ti3  front.tif  front.txt  go.mod  reference-front.ti3  reference-front.txt
cr30reader/: ARCHITECTURE_SUMMARY.md  DESIGN.md  INTERFACE_DESIGN.md  README.md  __init__.py  __main__.py  cli.py  gui.py  pyproject.toml  requirements.txt
cr30reader/argyll/: DESIGN.md  __init__.py  argyll_parser.py
cr30reader/color_science/: DESIGN.md  __init__.py  color_science.py  white_points.py
cr30reader/data/: CIE_std_illum_A_1nm.csv  CIE_std_illum_D50.csv  CIE_std_illum_D65.csv  CIE_xyz_1931_2deg.csv  README.md  __init__.py
cr30reader/driver/: DESIGN.md  __init__.py  cr30_reader.py  measurement.py
cr30reader/examples/: __init__.py  basic_usage.py
cr30reader/protocol/: DESIGN.md  __init__.py  device.py  packets.py  protocol.py
cr30reader/tests/: README.md  __init__.py  __main__.py  test_argyll.py  test_color_science.py  test_protocol.py
cr30reader/utils/: DESIGN.md  __init__.py  color_utils.py  file_utils.py
selphy-cp730/: README.md  (+29 more)
(+42 files in other folders)
